@@ -18,10 +18,6 @@ void printDepFlags(FILE * fp, const char * version, int flags)
 	fprintf(fp, ">");
     if (flags & RPMSENSE_EQUAL)
 	fprintf(fp, "=");
-#if defined(RPMSENSE_SERIAL)
-    if (flags & RPMSENSE_SERIAL)
-	fprintf(fp, "S");
-#endif	/* RPMSENSE_SERIAL */
 
     if (flags)
 	fprintf(fp, " %s", version);
