@@ -14,6 +14,7 @@
 	- add versions to provides.
 	- fix: sanity test on specfile fails when encountering i18n chars.
 	- print all dependencies for each package at end of build.
+	- the death of RPMSENSE_SERIAL, use [epoch:]version[-release] instead.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
